[package]
name = "sazan-cli"
version = "0.1.0"
edition = "2024"
description = "sazan-imgkit is a flexible Rust image processing toolkit and CLI for cropping, gridding, splitting, and combining images."

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
image = "0.24"
sazan = { path = "../sazan" }
